# job-radar

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/jobradar/: __init__.py  cli.py  config.py  models.py
src/jobradar/core/: dedup.py  detect.py  matcher.py  runner.py  scheduler.py
src/jobradar/notifiers/: _format.py  base.py  console.py  discord.py  telegram.py
src/jobradar/sources/: base.py  greenhouse.py  lever.py  workday.py
tests/: test_cli.py  test_config.py  test_console_notifier.py  test_dedup.py  test_detect.py  test_discord_notifier.py  test_greenhouse.py  test_lever.py  test_matcher.py  test_models.py  test_notifier_format.py  test_notifiers_base.py  test_runner.py  test_scheduler.py  test_sources_base.py  test_telegram_notifier.py  test_workday.py
