[project]
name = "job-radar"
version = "0.1.0"
description = "Watch company career sites (Workday, iCIMS, Greenhouse, Lever, Ashby, SmartRecruiters) for new job postings matching your keywords and get notified."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "yuvixmahar" }]
keywords = ["jobs", "ats", "workday", "icims", "greenhouse", "notifications", "scraper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "structlog>=24.1",
    "pyyaml>=6.0",
    "selectolax>=0.3.21",
]

[project.urls]
Homepage = "https://github.com/yuvixmahar/job-radar"
Repository = "https://github.com/yuvixmahar/job-radar"
Issues = "https://github.com/yuvixmahar/job-radar/issues"

[project.scripts]
jobradar = "jobradar.cli:app"

# Plugin registries. Third parties can add sources/notifiers in their own
# package by declaring entry points in these groups — no core code changes.
# Entries are added here as each adapter lands (build-order step 1+).
[project.entry-points."jobradar.sources"]
workday = "jobradar.sources.workday:WorkdaySource"

[project.entry-points."jobradar.notifiers"]
# console = "jobradar.notifiers.console:ConsoleNotifier"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jobradar"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "PTH", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
